# build-openwrt

./: README.md  config.toml  config.yml  dependence
.github/workflows/: build-openwrt.yml  update-checker.yml
config/: nanopi-r2s-base  nanopi-r2s-immortalwrt-adbyby  nanopi-r2s-immortalwrt-base  nanopi-r2s-immortalwrt-clash  nanopi-r2s-immortalwrt-download  nanopi-r2s-immortalwrt-music  nanopi-r2s-immortalwrt-std  nanopi-r2s-std  r2s-base  r2s-luci  r2s-std  r2s-std-and-dev
feeds/: small8.conf
scripts/: add-openclash.sh  add-unblockneteasemusic.sh
utils/: config_parse.py  pyproject.toml  test_config_parse.py  test_toml.toml
