[tool.poetry]
name = "build-openwrt-utils"
version = "0.1.0"
description = ""
authors = ["Gemone <git@gemo.one>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pydash = "^5.1.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
